--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
