--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
+    "react-paginate": "^7.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
